feat: customer test